added images and tweaked footer design

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
-            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/banner-image.png)"></div>
+            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/children-theatre.jpeg)"></div>
         </div> <!-- header banner -->
 
     </header>
@@ -151,10 +151,10 @@
                 <div class="col-lg-6">
                     <div class="about-image mt-50 clearfix">
                         <div class="single-image float-left">
-                            <img src="assets/images/about/about-1.png" alt="About">
+                            <img src="assets/images/about/face-painting.jpeg" alt="Creative Students">
                         </div> <!-- single image -->
                         <div class="single-image image-tow float-right">
-                            <img src="assets/images/about/about-2.png" alt="About">
+                            <img src="assets/images/banner/student-studying.jpeg" alt="Hard Working Students">
                         </div> <!-- single image -->
                     </div> <!-- about image -->
                 </div>
@@ -508,7 +508,7 @@
             <img src="assets/images/testimonial/shape.png" alt="testimonial">
         </div>
         <div class="container">
-            <div class="testimonial-bg bg_cover pt-80 pb-80" style="background-image: url(assets/images/testimonial/testimonial-bg.jpg)">
+            <div class="testimonial-bg bg_cover pt-80 pb-80" style="background-image: url(assets/images/testimonial/children-playing-outside.jpeg)">
                 <div class="row">
                     <div class="col-xl-4 offset-xl-7 col-lg-5 offset-lg-6 col-md-8 offset-md-2 col-sm-10 offset-sm-1">
                         <div class="testimonial-active">
@@ -565,7 +565,7 @@
                 <iframe id="gmap_canvas" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Ghyll%20Royd%20School+(Ghyll%20Royd%20School)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
             </div>
         </div>
-        <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(assets/images/map/map-bg.jpg)"></div>
+        <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(assets/images/map/easter-bunny.jpeg)"></div>
     </section>
 
     <!--====== MAP PART ENDS ======-->
@@ -581,39 +581,7 @@
                             <a href="#">
                                 <img src="assets/images/logo.png" alt="Logo">
                             </a>
-                            <ul class="footer-info">
-                                <li>
-                                    <div class="single-info">
-                                        <div class="info-icon">
-                                            <i class="lni-phone-handset"></i>
-                                        </div>
-                                        <div class="info-content">
-                                            <p><a href="tel:01943865575">01943 865575</a></p>
-                                        </div>
-                                    </div> <!-- single info -->
-                                </li>
-                                <li>
-                                    <div class="single-info">
-                                        <div class="info-icon">
-                                            <i class="lni-envelope"></i>
-                                        </div>
-                                        <div class="info-content">
-                                            <p><a href="mailto:information@ghyllroydschool.co.uk?subject=Bursary Enquiry">information@ghyllroydschool.co.uk</a></p>
-                                        </div>
-                                    </div> <!-- single info -->
-                                </li>
-                                <li>
-                                    <div class="single-info">
-                                        <div class="info-icon">
-                                            <i class="lni-map"></i>
-                                        </div>
-                                        <div class="info-content">
-                                            <p>Ghyll Royd School and Pre-School, Greystone Manor, Ilkley Road, Burley-in-Wharfedale, Ilkley, West Yorkshire LS29 7HW</p>
-                                        </div>
-                                    </div> <!-- single info -->
-                                </li>
-                            </ul>
-                            <ul class="footer-social mt-20">
+                            <ul class="footer-social mt-45">
                                 <li><a href="https://www.facebook.com/GhyllRoydSchool"><i class="lni-facebook-filled"></i></a></li>
                                 <li><a href="https://www.twitter.com/GhyllRoydSchool"><i class="lni-twitter-original"></i></a></li>
                                 <li><a href="https://www.ceop.police.uk/safety-centre/" target="_blank" rel="nofollow noreferrer"><img src="assets/images/ceop-logo.png" alt="CEOP"></a></li>
@@ -632,11 +600,44 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-    
-                    </div>
-                    <div class="col-lg-3 col-md-5 col-sm-8">
-                        
+                    <div class="col-lg-6 col-md-4 col-sm-6">
+                        <div class="footer-link mt-45">
+                            <div class="f-title">
+                                <h4 class="title">Contact Information</h4>
+                            </div>
+                            <ul class="footer-info mt-15">
+                                <li>
+                                    <div class="single-info d-flex align-items-center">
+                                        <div class="info-icon mr-3">
+                                            <i class="lni-phone-handset"></i>
+                                        </div>
+                                        <div class="info-content">
+                                            <p><a href="tel:01943865575">01943 865575</a></p>
+                                        </div>
+                                    </div> <!-- single info -->
+                                </li>
+                                <li>
+                                    <div class="single-info d-flex align-items-center">
+                                        <div class="info-icon mr-3">
+                                            <i class="lni-envelope"></i>
+                                        </div>
+                                        <div class="info-content">
+                                            <p><a href="mailto:information@ghyllroydschool.co.uk?subject=Bursary Enquiry">information@ghyllroydschool.co.uk</a></p>
+                                        </div>
+                                    </div> <!-- single info -->
+                                </li>
+                                <li>
+                                    <div class="single-info d-flex align-items-center">
+                                        <div class="info-icon mr-3">
+                                            <i class="lni-map"></i>
+                                        </div>
+                                        <div class="info-content">
+                                            <p>Ghyll Royd School and Pre-School, Greystone Manor, Ilkley Road, Burley-in-Wharfedale, Ilkley, West Yorkshire LS29 7HW</p>
+                                        </div>
+                                    </div> <!-- single info -->
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
