updated colours to reflect branding

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright text-center">
-                            <p>&copy;  <a href="https://thecodersguild.org.uk/" target="_blank" rel="nofollow">The Coders Guild</a></p>
+                            <p>Built in conjunction with &copy;  <a href="https://thecodersguild.org.uk/" target="_blank" rel="nofollow">The Coders Guild</a></p>
                         </div> <!-- copyright -->
                     </div>
                 </div> <!-- row -->
