changed footer link to go to about section

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                                 <h4 class="title">Essential Links</h4>
                             </div>
                             <ul class="mt-15">
-                                <li><a href="#">About The Bursary</a></li>
+                                <li><a href="#about">About The Bursary</a></li>
                                 <li><a href="https://www.ghyllroydschool.co.uk/" target="_blank" rel="noreferrer noopener">Main Website</a></li>
                             </ul>
                         </div>
