--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     <div class="col-xl-8 col-lg-9 col-sm-10">
                         <div class="banner-content">
                             <h4 class="sub-title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Ghyll Royd School</h4>
-                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19</span> Pandemic Recovery Bursary Scheme</h1>
-                            <a class="banner-contact mt-25 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.3s" href="#contact">Contact Us For More Information</a>
+                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19</span> Recovery Scholarship Scheme</h1>
+                            <a class="banner-contact mt-25 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.3s" href="#contact">Get in Touch to find out</a>
                         </div> <!-- banner content -->
                     </div>
                 </div> <!-- row -->
