--- a/index.html
+++ b/index.html
@@ -436,8 +436,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
-                        <h5 class="sub-title mb-15">Contact us</h5>
-                        <h2 class="title">Get In touch</h2>
+                        <h2 class="title mb-15">Contact us</h2>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
