replaced lorem text for copy

--- a/index.html
+++ b/index.html
@@ -157,10 +157,18 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-content mt-45">
-                        <h4 class="about-welcome">About The Scheme</h4>
-                        <h3 class="about-title mt-10">How We Can Help</h3>
-                        <p class="mt-25">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages
-                            <br> <br>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <h3 class="about-welcome">About Us</h3>
+                        <h4 class="about-title mt-10">Small School Big Results</h4>
+                        <p class="mb-25">We are the top small independent school in the North of England with over 130 years providing exceptional education</p>
+                        <ul class="list">
+                            <li>UK Top 10 Exam results - ranked 9th place in UK by Sunday Times School Guide</li>
+                            <li>Gold ActiveMark Status - 10 hours physical activity a week for all pupils</li>
+                            <li>Gold Eco and Woodland Trust Grounds - 7 acres of meadow & outdoor classroom</li>
+                            <li>Platinum Artsmark Status - for creativity in lessons</li>
+                        </ul>
+                        <h3 class="about-welcome">About The Scheme</h3>
+                        <h4 class="about-title mt-10">Has your child experienced difficulties due to school closures?</h4>
+                        <p class="mb-25">We are making our quality education accessible to children who have experienced difficulties as a result of the pandemic. Our scholarships are available to talented children who would thrive with a Ghyll Royd education.</p>
                         <a class="main-btn mt-25" href="#contact">Get in Touch</a>
                     </div> <!-- about content -->
                 </div>
