Removed icon and replaced with link in essential links

--- a/index.html
+++ b/index.html
@@ -581,9 +581,7 @@
                             </a>
                             <ul class="footer-social mt-45">
                                 <li><a href="https://www.facebook.com/GhyllRoydSchool"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="https://www.twitter.com/GhyllRoydSchool"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="https://www.ceop.police.uk/safety-centre/" target="_blank" rel="nofollow noreferrer"><img src="assets/images/ceop-logo.png" alt="CEOP"></a></li>
-                                <li><a href="https://www.instagram.com/ghyllroydschool"><i class="lni-instagram"></i></a></li>
+                                <li><a href="https://www.twitter.com/GhyllRoydSchool"><i class="lni-twitter-original"></i></a></li>                                <li><a href="https://www.instagram.com/ghyllroydschool"><i class="lni-instagram"></i></a></li>
                             </ul>
                         </div> <!-- footer logo -->
                     </div>
@@ -597,6 +595,7 @@
                                 <li><a href="https://www.ghyllroydschool.co.uk/school/academic-attainment/" target="_blank" rel="noreferrer noopener">SAT Examination Results</a></li>
                                 <li><a href="https://www.ghyllroydschool.co.uk/events/leap-holiday-school-summer-dates-2021/" target="_blank" rel="noreferrer noopener">LEAP Holiday School</a></li>
                                 <li><a href="https://www.ghyllroydschool.co.uk/about-us/isi-report/" target="_blank" rel="noreferrer noopener">ISI Report</a></li>
+                                <li><a href="https://www.ceop.police.uk/safety-centre/" target="_blank" rel="nofollow noreferrer">Safeguarding</a></li>
                             </ul>
                         </div>
                     </div>
