--- a/index.html
+++ b/index.html
@@ -437,6 +437,33 @@
 
     <!--====== TEAM PART ENDS ======-->
 
+        <!--====== AWARD PART ENDS ======-->
+        <section id="awards">
+            <div class="container">
+                <h4 class="about-title mt-10 mb-5 text-center">Just some of our Awards</h4>
+                <div class="row">
+                    <div class="col-lg-1"></div>
+                    <div class="col-6 col-md-4 col-lg-2 align-self-center">
+                        <img class="d-block w-100 px-3 mb-3" src="assets/images/awards/sunday-times-awards.png" alt="First slide">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 align-self-center">
+                        <img class="d-block w-100 px-3  mb-3" src="assets/images/awards/Independent-Schools-of-the-Year-2020-Finalist-rosette-1-212x300.png" alt="First slide">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2  align-self-center">
+                        <img class="d-block w-100 px-3  mb-3" src="assets/images/awards/School-Games-Gold-Award.jpeg" alt="First slide">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2  align-self-center">
+                        <img class="d-block w-100 px-3  mb-3" src="assets/images/awards/Woodland-Trust-Gold-Award.png" alt="First slide">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2  align-self-center">
+                        <img class="d-block w-100 px-3  mb-3" src="assets/images/awards/independent-schools-of-the-year-2019.jpeg" alt="First slide">
+                    </div>
+                    <div class="col-lg-1"></div>
+                </div>
+            </div> 
+        </section>
+        <!--====== AWARD PART ENDS ======-->
+
     <!--====== TESTIMONIAL PART START ======-->
 
     <section id="testimonial" class="testimonial-area pt-130 pb-130">
@@ -507,6 +534,7 @@
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
                         <h2 class="title mb-15">Contact us</h2>
+                        <p>Let us know your details and we will be in touch with more information</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
