added list from changes

--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
                         <h4 class="about-title mt-10">Small School Big Results</h4>
                         <p class="mb-25">We are <strong>the</strong> top small independent school in the North of England with over 130 years providing exceptional education.</p>
                         <ul class="list">
-                            <li>UK Top 10 Exam results - ranked 9th place in UK by Sunday Times School Guide</li>
-                            <li>Gold ActiveMark Status - 10 hours physical activity a week for all pupils</li>
-                            <li>Gold Eco and Woodland Trust Grounds - 7 acres of meadow & outdoor classroom</li>
-                            <li>Platinum Artsmark Status - for creativity in lessons</li>
+                            <li>Small Independent School of the Year Finalist 2019 and 2020</li>
+                            <li>UK Top 10 exam results - No.9 Sunday Times School Guide</li>
+                            <li>10+ hours physical activity every week</li>
+                            <li>Woodland Trust 'Gold' Grounds - 7 acres meadow and outdoor classroom
+                            </li>
+                            <li>Platinum Artsmark Status - creativity in all lessons</li>
                         </ul>
                         <a class="main-btn mt-25" href="#contact">Get in Touch</a>
                     </div> <!-- about content -->
