PR changes done

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="col-xl-8 col-lg-9 col-sm-10">
                         <div class="banner-content">
                             <h4 class="sub-title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Ghyll Royd School</h4>
-                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19 Recovery Scholarship Scheme</span></h1>
+                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19 Recovery</span> Scholarship Scheme</h1>
                             <a class="banner-contact mt-25 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.3s" href="#contact">Find Out More</a>
                         </div> <!-- banner content -->
                     </div>
@@ -570,7 +570,7 @@
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
                         <h2 class="title mb-15">Contact us</h2>
-                        <p>Let us know your details and we will be in touch with more information. Fill in the form and we will be in touch.</p>
+                        <p>Fill in the form and we will be in touch.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
