--- a/index.html
+++ b/index.html
@@ -161,19 +161,59 @@
             </div> <!-- container -->
         </div> <!-- navigation bar -->
 
-        <div class="header-banner d-flex align-items-center">
+        <div class="header-banner d-flex align-items-center mt-5 mt-lg-0">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-9 col-sm-10">
+                    <div class="col-lg-7">
                         <div class="banner-content">
                             <h4 class="sub-title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Ghyll Royd School</h4>
                             <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19 Recovery</span> Scholarship Scheme</h1>
                             <a class="banner-contact mt-25 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.3s" href="#contact">Find Out More</a>
                         </div> <!-- banner content -->
                     </div>
+                    <div class="col-lg-5">
+                        <div class="contact-form">
+                            <div class="section-title text-center pb-20">
+                                <p class="mt-5 mt-lg-0">Fill in the form and we will be in touch.</p>
+                            </div> <!-- section title -->
+                            <form id="contact-form" action="https://formspree.io/f/xwkapaab" method="post" data-toggle="validator">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="single-form form-group">
+                                            <input type="text" name="name" placeholder="Your Name" data-error="Name is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="single-form form-group">
+                                            <input type="text" name="phone" placeholder="Phone" data-error="Phone is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group">
+                                            <input type="email" name="email" placeholder="Your Email" data-error="Valid email is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group">
+                                            <textarea placeholder="Anything you would like to add?" name="message" data-error="Please,leave us a message."></textarea>
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <p class="form-message"></p>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group text-center">
+                                            <button type="submit" class="main-btn">send message</button>
+                                        </div> <!-- single form -->
+                                    </div>
+                                </div> <!-- row -->
+                            </form>
+                        </div> <!-- row -->
+                    </div>
                 </div> <!-- row -->
             </div> <!-- container -->
-            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/ghyll-royd-students.jpeg)"></div>
         </div> <!-- header banner -->
 
     </header>
@@ -604,16 +644,16 @@
 
     <!--====== CONTACT PART START ======-->
 
-    <section id="contact" class="contact-area pt-125 pb-130 gray-bg">
+    <!-- <section id="contact" class="contact-area pt-125 pb-130 gray-bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
                         <h2 class="title mb-15">Contact us</h2>
                         <p>Fill in the form and we will be in touch.</p>
-                    </div> <!-- section title -->
+                    </div> 
                 </div>
-            </div> <!-- row -->
+            </div> 
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="contact-form">
@@ -623,39 +663,39 @@
                                     <div class="single-form form-group">
                                         <input type="text" name="name" placeholder="Your Name" data-error="Name is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-6">
                                     <div class="single-form form-group">
                                         <input type="text" name="phone" placeholder="Phone" data-error="Phone is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-12">
                                     <div class="single-form form-group">
                                         <input type="email" name="email" placeholder="Your Email" data-error="Valid email is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-12">
                                     <div class="single-form form-group">
                                         <textarea placeholder="Anything you would like to add?" name="message" data-error="Please,leave us a message."></textarea>
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="single-form form-group text-center">
                                         <button type="submit" class="main-btn">send message</button>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
-                            </div> <!-- row -->
+                            </div> 
                         </form>
-                    </div> <!-- row -->
+                    </div> 
                 </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </section>
+            </div> 
+        </div> 
+    </section> 
 
     <!--====== CONTACT PART ENDS ======-->
 
