Revert "initial commit"
This reverts commit d5be8b69351b5b6b2cbf0c8bd54197a1b1c13868.

--- a/index.html
+++ b/index.html
@@ -161,19 +161,59 @@
             </div> <!-- container -->
         </div> <!-- navigation bar -->
 
-        <div class="header-banner d-flex align-items-center">
+        <div class="header-banner d-flex align-items-center mt-5 mt-lg-0">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-9 col-sm-10">
+                    <div class="col-lg-7">
                         <div class="banner-content">
                             <h4 class="sub-title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">Ghyll Royd School</h4>
-                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s">Holiday Club!</h1>
+                            <h1 class="banner-title mt-10 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s"><span>Covid-19 Recovery</span> Scholarship Scheme</h1>
                             <a class="banner-contact mt-25 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.3s" href="#contact">Find Out More</a>
                         </div> <!-- banner content -->
                     </div>
+                    <div class="col-lg-5">
+                        <div class="contact-form">
+                            <div class="section-title text-center pb-20">
+                                <p class="mt-5 mt-lg-0">Fill in the form and we will be in touch.</p>
+                            </div> <!-- section title -->
+                            <form id="contact-form" action="https://formspree.io/f/xwkapaab" method="post" data-toggle="validator">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="single-form form-group">
+                                            <input type="text" name="name" placeholder="Your Name" data-error="Name is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="single-form form-group">
+                                            <input type="text" name="phone" placeholder="Phone" data-error="Phone is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group">
+                                            <input type="email" name="email" placeholder="Your Email" data-error="Valid email is required." required="required">
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group">
+                                            <textarea placeholder="Anything you would like to add?" name="message" data-error="Please,leave us a message."></textarea>
+                                            <div class="help-block with-errors"></div>
+                                        </div> <!-- single form -->
+                                    </div>
+                                    <p class="form-message"></p>
+                                    <div class="col-md-12">
+                                        <div class="single-form form-group text-center">
+                                            <button type="submit" class="main-btn">send message</button>
+                                        </div> <!-- single form -->
+                                    </div>
+                                </div> <!-- row -->
+                            </form>
+                        </div> <!-- row -->
+                    </div>
                 </div> <!-- row -->
             </div> <!-- container -->
-            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/ghyll-royd-students.jpeg)"></div>
         </div> <!-- header banner -->
 
     </header>
@@ -197,9 +237,9 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-content mt-45">
-                        <h3 class="about-welcome">About The Holiday Club</h3>
-                        <h4 class="about-title mt-10">Lorem ipsum dolor sit amet.</h4>
-                        <p class="mb-25">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus consequatur dolorem ad laboriosam consectetur unde vitae, repellendus quidem quos a earum tenetur iure alias, possimus, dolorum sapiente ut rerum deserunt.</p>
+                        <h3 class="about-welcome">About The Scheme</h3>
+                        <h4 class="about-title mt-10">Has your child experienced difficulties due to school closures?</h4>
+                        <p class="mb-25">We are making our quality education accessible to children who have experienced difficulties as a result of the pandemic. Our scholarships are available to talented children who would thrive with a Ghyll Royd education.</p>
                         
                         <h3 class="about-welcome">About Us</h3>
                         <h4 class="about-title mt-10">Small School Big Results</h4>
@@ -604,58 +644,58 @@
 
     <!--====== CONTACT PART START ======-->
 
-    <section id="contact" class="contact-area pt-125 pb-130 gray-bg">
+    <!-- <section id="contact" class="contact-area pt-125 pb-130 gray-bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
                         <h2 class="title mb-15">Contact us</h2>
                         <p>Fill in the form and we will be in touch.</p>
-                    </div> <!-- section title -->
+                    </div> 
                 </div>
-            </div> <!-- row -->
+            </div> 
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="contact-form">
-                        <form id="contact-form" action="https://formspree.io/f/xnqldlln" method="post" data-toggle="validator">
+                        <form id="contact-form" action="https://formspree.io/f/xwkapaab" method="post" data-toggle="validator">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="single-form form-group">
                                         <input type="text" name="name" placeholder="Your Name" data-error="Name is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-6">
                                     <div class="single-form form-group">
                                         <input type="text" name="phone" placeholder="Phone" data-error="Phone is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-12">
                                     <div class="single-form form-group">
                                         <input type="email" name="email" placeholder="Your Email" data-error="Valid email is required." required="required">
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <div class="col-md-12">
                                     <div class="single-form form-group">
                                         <textarea placeholder="Anything you would like to add?" name="message" data-error="Please,leave us a message."></textarea>
                                         <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="single-form form-group text-center">
                                         <button type="submit" class="main-btn">send message</button>
-                                    </div> <!-- single form -->
+                                    </div> 
                                 </div>
-                            </div> <!-- row -->
+                            </div> 
                         </form>
-                    </div> <!-- row -->
+                    </div> 
                 </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </section>
+            </div> 
+        </div> 
+    </section> 
 
     <!--====== CONTACT PART ENDS ======-->
 
@@ -667,7 +707,7 @@
                 <iframe id="gmap_canvas" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Ghyll%20Royd%20School+(Ghyll%20Royd%20School)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
             </div>
         </div>
-        <div class="map-bg bg_cover" style="background-image: url(./assets/images/banner/children-theatre.jpeg);"></div>
+        <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(/assets/images/banner/children-theatre.jpeg)"></div>
     </section>
 
     <!--====== MAP PART ENDS ======-->
