add video to home page

--- a/index.html
+++ b/index.html
@@ -261,6 +261,19 @@
 
     <!--====== ABOUT PART ENDS ======-->
 
+    <!--====== VIDEO PART STARTS ======-->
+        <section class="pb-130">
+            <div class="container my-25">
+                <div class="row">
+                    <h3 class="about-welcome text-center text-uppercase mb-25 w-100">See our Success</h3>
+                    <p class="mb-25 text-center w-100">Watch our amazing students and teachers give their thoughts on our wonderful school.</p>
+                    <iframe width="100%" height="720px" src="https://www.youtube.com/embed/uk-bmu2aMT4?controls=0" title="Ghyll Royd School, Pre-School and Nursery promotional video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
+        </section>
+    <!--====== VIDEO PART ENDS ======-->
+
     <!--====== SERVICES PART START ======-->
 
     <!-- <section id="service" class="services-area pt-125 pb-130 gray-bg">
